# enex2md

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: unittest.yml
enex2md/: cli.py  convert.py
tests/: conftest.py  test_cli.py  test_convert.py
tests/enex/: notebook01.enex  notebook02.enex  notebook03-2.enex  notebook03-3.enex  notebook03.enex  notebook04.enex  notebook05.enex  notebook06.enex
