[project]
name = "enex2md"
description = "Convert Evernote export archive (enex format) to Markdown."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Jani Karhunen", email = "janikarh@gmail.com" },
    { name = "Stefaan Lippens", email = "soxofaan@gmail.com" },
]
dynamic = ["version"]
requires-python = ">=3.8.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: File Formats",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
dependencies = [
    "Click>=7.0",
    "html2text>=2019.9.26",
    "beautifulsoup4>=4.8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[project.urls]
"Original Repository" = "https://github.com/janikarh/enex2md"
Repository = "https://github.com/soxofaan/enex2md"
Changelog = "https://github.com/soxofaan/enex2md/blob/main/CHANGELOG.md"


[project.scripts]
enex2md = "enex2md.cli:app"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.version]
source = "regex"
path = "enex2md/__init__.py"


[tool.hatch.build]
include = [
    "enex2md",
]


[tool.black]
line-length = 120


[tool.isort]
profile = "black"


[tool.ruff]
ignore = [
    "E501", # ignore line length violations
]
target-version = "py311"
